refactor: Some Changes.

--- a/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/FavoritesMoviesPage.xaml
@@ -19,6 +19,7 @@
                 x:Name="UnPin"
                 Grid.ColumnSpan="2"
                 HeightRequest="300"
+                VerticalOptions="Center"
                 HorizontalOptions="Center"
                 Source="Unpin.png"
                 WidthRequest="300" />
