feat: Initial Implementation.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -6,6 +6,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
     Title="SSFR Movies"
+    xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
     BackgroundColor="#161513">
 
     <ContentPage.Resources>
