Refactor: Lots of changes.

--- a/SSFR_Movies/SSFR_Movies/Views/About.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/About.xaml
@@ -13,6 +13,7 @@
                         HeightRequest="250"
                         HorizontalOptions="Center"
                         Source="icon.png"
+                        Aspect="AspectFit"
                         WidthRequest="250" />
                     
                     <Label
